codepkg/objects/F42__c.object
<CustomObject>
    <description>This object stores the actual f-42 submission data. This and related child objects will be used for generating Invoices</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>1 AGENCY NAME</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>F-42</relationshipLabel>
        <relationshipName>F_42</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>F-42</relationshipLabel>
        <relationshipName>F_42</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DF_Dispatch_From_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>END DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DF_OLD_INCIDENT_REQUEST__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OLD INCIDENT REQUEST#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DF_OLD_INCIDENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OLD INCIDENT</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>F-42s (OLD INCIDENT)</relationshipLabel>
        <relationshipName>F_42s1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DI_COMMITTED_TO_INCIDENT_FORMULA__c</fullName>
        <formula>TEXT(DI_Committed_to_Incident_Date__c) + &apos; &apos;+ DI_Committed_to_Incident_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COMMITTED TO INCIDENT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DI_Committed_to_Incident_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COMMITTED TO INCIDENT DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_Committed_to_Incident_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COMMITTED TO INCIDENT TIME</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DI_Mobilization_Center_Preposition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MOBILIZATION CENTER / PREPOSITION</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DI_REDISPATCHED__c</fullName>
        <formula>TEXT(DI_Redispatched_Date__c) +&apos; &apos;+ DI_Redispatched_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REDISPATCHED</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DI_REPORTING_LOCATION__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>REPORTING LOCATION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DI_RETURN_FROM_INCIDENT__c</fullName>
        <formula>TEXT(DI_Return_from_Incident_Date__c)+&apos; &apos;+ DI_Return_from_Incident_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RETURN FROM INCIDENT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DI_Redispatched_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>REDISPATCHED DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_Redispatched_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>REDISPATCHED TIME</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DI_Return_from_Incident_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RETURN FROM INCIDENT DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DI_Return_from_Incident_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RETURN FROM INCIDENT TIME</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Dispatch_To_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>START DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DT_NEW_INCIDENT_REQUEST__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NEW INCIDENT REQUEST#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_NEW_INCIDENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NEW INCIDENT</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>F-42s (NEW INCIDENT)</relationshipLabel>
        <relationshipName>F_42s2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_from_Submission__c</fullName>
        <formula>TODAY() - DATEVALUE(Submission_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field indicates the number of days that are passed from the day of submission. Usually everything have to be processed within 60 days</inlineHelpText>
        <label>Days from Submission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_APPARATUS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>APPARATUS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_CDF_OES_VEHICLE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CDF/OES VEHICLE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_FEMA_CODES__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FEMA CODES</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_LICENSE_NUMBER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LICENSE NUMBER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_SPECIAL_EQUIPMENT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SPECIAL EQUIPMENT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_TYPE__c</fullName>
        <label>TYPE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>WT-1</fullName>
                </value>
                <value>
                    <fullName>WT-2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_UNIT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UNIT#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>F42_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>F42 Entry</label>
        <referenceTo>F42_Entry__c</referenceTo>
        <relationshipLabel>F-42</relationshipLabel>
        <relationshipName>F_42</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ICS_Title_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ICS Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Name__c</fullName>
        <formula>Incident__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INCIDENT NAME (formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Order__c</fullName>
        <formula>Incident__r.Order_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3. INCIDENT ORDER#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Request_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>4. INCIDENT REQUEST NUMBER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>INCIDENT NAME</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>F-42s</relationshipLabel>
        <relationshipName>F_42s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>F-42s</relationshipLabel>
        <relationshipName>F_42s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MACIDs__c</fullName>
        <formula>Account__r.MACS_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MACIDs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEW_INCIDENT_ORDER_NUMBER__c</fullName>
        <formula>DT_NEW_INCIDENT__r.Order_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NEW INCIDENT ORDER NUMBER</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OH_ICS_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ICS Title Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OH_OTHER_ICS_TITLE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OTHER ICS TITLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OH_OVERHEAD_INFORMATION__c</fullName>
        <label>OVERHEAD INFORMATION</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>STEN/TFLD</fullName>
                </value>
                <value>
                    <fullName>STEN(T)/TFLD(T)</fullName>
                </value>
                <value>
                    <fullName>Overhead Position</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OH_OVERHEAD_TYPE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OVERHEAD TYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLD_INCIDENT_ORDER_NUMBER__c</fullName>
        <formula>DF_OLD_INCIDENT__r.Order_No__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OLD INCIDENT ORDER NUMBER</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_CALOESREP_DATE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PA_Cal_OES_REPRESENTATIVE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cal OES REPRESENTATIVE (if assigned)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_DATE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PA_ICS_POSITION_TITLE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ICS POSITION / TITLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_OTHER_POSITION_TITLE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OTHER POSITION / TITLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_OTHER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OTHER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_PAYING_AGENCY__c</fullName>
        <label>PAYING AGENCY</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAL OES</fullName>
                </value>
                <value>
                    <fullName>CAL FIRE</fullName>
                </value>
                <value>
                    <fullName>USFS</fullName>
                </value>
                <value>
                    <fullName>BLM</fullName>
                </value>
                <value>
                    <fullName>NPS</fullName>
                </value>
                <value>
                    <fullName>BIA</fullName>
                </value>
                <value>
                    <fullName>FWS</fullName>
                </value>
                <value>
                    <fullName>LRA/MMA</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PA_PRINTED_NAME__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PRINTED NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_DOCUMENTATION_ONLY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DOCUMENTATION ONLY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PI_NUMBER_OF_PERSONNEL_ON_APPARATUS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NUMBER OF PERSONNEL ON APPARATUS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RA_AGENCY_NAME__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AGENCY NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RA_YOUR_NAME__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>YOUR NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RA_YOUR_PHONE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>YOUR PHONE#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RA_YOUR_TITLE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>YOUR TITLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SN_LOSS_DAMAGE_CLAIM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>15. LOSS/DAMAGE CLAIM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SN_SUPPLY_NUMBER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>16. SUPPLY NUMBER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SV_BEGINNING_ODODMETER__c</fullName>
        <label>BEGINNING ODODMETER</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SV_ENDING_ODOMETER__c</fullName>
        <label>ENDING ODOMETER</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SV_LICENSE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LICENSE#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SV_TOTAL_MILES__c</fullName>
        <formula>SV_ENDING_ODOMETER__c -  SV_BEGINNING_ODODMETER__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOTAL MILES</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SV_TYPE__c</fullName>
        <label>TYPE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sedan</fullName>
                </value>
                <value>
                    <fullName>SUV</fullName>
                </value>
                <value>
                    <fullName>Pick-Up (1/2 Ton)</fullName>
                </value>
                <value>
                    <fullName>Other (3/4 Ton &amp; Above)</fullName>
                </value>
                <value>
                    <fullName>Van</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SV_VEHICLE_OWNERSHIP__c</fullName>
        <label>VEHICLE OWNERSHIP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>POV</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>CDF/OES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CALOES REVIEW</fullName>
                </value>
                <value>
                    <fullName>AGENCY REVIEW</fullName>
                </value>
                <value>
                    <fullName>APPROVED</fullName>
                </value>
                <value>
                    <fullName>DOCUMENTATION ONLY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strike_Team__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>2 STRIKE TEAM / TASK FORCE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Submission Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submitted_Year__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Submitted Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>F-42</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RA_AGENCY_NAME__c</columns>
        <columns>Incident__c</columns>
        <columns>Status__c</columns>
        <columns>Strike_Team__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MARS_F_42_APPROVAL_QUEUE_F42</fullName>
        <columns>MACIDs__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>RA_AGENCY_NAME__c</columns>
        <columns>Incident_Name__c</columns>
        <columns>Incident_Order__c</columns>
        <columns>Strike_Team__c</columns>
        <columns>Incident_Request_Number__c</columns>
        <columns>PA_PAYING_AGENCY__c</columns>
        <columns>Status__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>CALOES REVIEW</value>
        </filters>
        <label>Pending Approval Queue</label>
        <queue>MARS_F_42_APPROVAL_QUEUE</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>F-42 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>F-42s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>